--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "react-basics",
+  "name": "TodoQuote",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "moment": "^2.29.1",
-    "netlify-cli": "^3.13.6",
-    "node": "^17.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "node": "^16.11.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
-    "react-scripts": "4.0.2",
-    "react-uuid": "^1.0.2",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "^3.4.4",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
